styles: waves z-index fixed

--- a/src/components/waves/styles.scss
+++ b/src/components/waves/styles.scss
@@ -2,6 +2,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
+  z-index: -100;
 
   @include respond(tab-landscape) {
     bottom: -18rem;
